Add support for type annotations and add tests